@@ -772,22 +772,20 @@ BEGIN
     CONTROL         "&Preserve file time in file compare",
                     IDC_PRESERVE_FILETIME,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,7,67,220,10
-    CONTROL         "Enable Shell &Context Menu",IDC_ENABLE_SHELL_CONTEXT_MENU,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,77,220,10
     CONTROL         "Show ""Select Files or Folders"" Dialog on Startup",IDC_STARTUP_FOLDER_SELECT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,86,176,13
-    LTEXT           "O&pen-dialog Auto-Completion:",IDC_STATIC,19,103,125,8
-    COMBOBOX        IDC_AUTO_COMPLETE_SOURCE,20,111,147,41,CBS_DROPDOWNLIST | 
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,77,176,13
+    LTEXT           "O&pen-dialog Auto-Completion:",IDC_STATIC,19,91,125,8
+    COMBOBOX        IDC_AUTO_COMPLETE_SOURCE,20,101,147,41,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Enable multiple compare windows for",IDC_STATIC,7,130,
+    GROUPBOX        "Enable multiple compare windows for",IDC_STATIC,7,120,
                     221,37
     CONTROL         "&Folder compare",IDC_MULTIDOC_DIRCMP,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,142,206,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,132,206,10
     CONTROL         "Fil&e compare",IDC_MULTIDOC_FILECMP,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,151,206,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,141,206,10
     LTEXT           "WinMerge allows hiding some common messageboxes. Press the Reset button to make all messageboxes visible again.",
-                    IDC_STATIC,7,183,168,31
-    PUSHBUTTON      "Reset",IDC_RESET_ALL_MESSAGE_BOXES,178,190,50,14,NOT
+                    IDC_STATIC,7,173,168,31
+    PUSHBUTTON      "Reset",IDC_RESET_ALL_MESSAGE_BOXES,178,180,50,14,NOT
                     WS_TABSTOP
 END
 
@@ -995,26 +993,19 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     CONTROL         "&Send deleted files to Recycle Bin",IDC_USE_RECYCLE_BIN,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,222,10
-    GROUPBOX        "Integration",IDC_STATIC,7,20,218,46
-    CONTROL         "&Add to explorer context menu",IDC_EXPLORER_CONTEXT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,31,200,10
-    CONTROL         "E&nable advanced menu",IDC_EXPLORER_ADVANCED,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,27,41,190,10
-    CONTROL         "In&clude subfolders by default",IDC_EXPLORER_SUBFOLDERS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,27,51,190,10
-    LTEXT           "&External editor:",IDC_STATIC,7,73,222,8
-    EDITTEXT        IDC_EXT_EDITOR_PATH,7,83,167,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "&Browse...",IDC_EXT_EDITOR_BROWSE,179,83,50,14
-    LTEXT           "&Filter folder:",IDC_STATIC,7,101,166,8
-    EDITTEXT        IDC_FILTER_USER_PATH,7,111,167,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "B&rowse...",IDC_FILTER_USER_BROWSE,179,111,50,14
-    GROUPBOX        "Temporary files folder",IDC_STATIC,7,130,218,56
+    LTEXT           "&External editor:",IDC_STATIC,7,23,222,8
+    EDITTEXT        IDC_EXT_EDITOR_PATH,7,33,167,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "&Browse...",IDC_EXT_EDITOR_BROWSE,179,33,50,14
+    LTEXT           "&Filter folder:",IDC_STATIC,7,51,166,8
+    EDITTEXT        IDC_FILTER_USER_PATH,7,61,167,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "B&rowse...",IDC_FILTER_USER_BROWSE,179,61,50,14
+    GROUPBOX        "Temporary files folder",IDC_STATIC,7,80,218,56
     CONTROL         "S&ystem's temp folder",IDC_TMPFOLDER_SYSTEM,"Button",
-                    BS_AUTORADIOBUTTON | WS_GROUP,17,142,199,10
+                    BS_AUTORADIOBUTTON | WS_GROUP,17,92,199,10
     CONTROL         "C&ustom folder:",IDC_STATIC,"Button",BS_AUTORADIOBUTTON,
-                    17,152,199,10
-    EDITTEXT        IDC_TMPFOLDER_NAME,27,164,136,14,ES_AUTOHSCROLL | WS_GROUP
-    PUSHBUTTON      "Br&owse...",IDC_TMPFOLDER_BROWSE,167,164,50,14
+                    17,102,199,10
+    EDITTEXT        IDC_TMPFOLDER_NAME,27,114,136,14,ES_AUTOHSCROLL | WS_GROUP
+    PUSHBUTTON      "Br&owse...",IDC_TMPFOLDER_BROWSE,167,114,50,14
 END
 
 IDD_GENERATE_PATCH DIALOGEX 0, 0, 340, 180
@@ -1676,6 +1667,24 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,313,190,50,14
 END
 
+IDD_PROPPAGE_SHELL DIALOGEX 0, 0, 236, 222
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION
+CAPTION "Shell Integration"
+FONT 8, "MS Shell Dlg", 0, 0, 0x1
+BEGIN
+    GROUPBOX        "Explorer",IDC_STATIC,7,7,218,46
+    CONTROL         "E&nable advanced menu",IDC_EXPLORER_ADVANCED,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,27,28,190,10
+    CONTROL         "In&clude subfolders by default",IDC_EXPLORER_SUBFOLDERS,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,27,38,190,10
+    CONTROL         "&Add to context menu",IDC_EXPLORER_CONTEXT,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,18,200,10
+    GROUPBOX        "Folder compare",IDC_STATIC,7,58,218,26
+    CONTROL         "Add &Shell menu to context menu",
+                    IDC_ENABLE_SHELL_CONTEXT_MENU,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,19,69,200,10
+END
+
 #ifndef _MAC
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -1941,6 +1950,7 @@ BEGIN
     IDS_OPTIONSPG_CODEPAGE  "Codepage"
     IDS_OPTIONSPG_ARCHIVE   "Archive Support"
     IDS_OPTIONSPG_BACKUPS   "Backup Files"
+    IDS_OPTIONSPG_SHELL     "Shell Integration"
 END
 
 // WINMERGE CUSTOM STRINGS
