@@ -43,7 +43,6 @@ public:
 	BOOL	m_bMultipleDirCmp;
 	int		m_nAutoCompleteSource;
 	BOOL	m_bPreserveFiletime;
-	BOOL	m_bEnableShellContextMenu;
 	BOOL	m_bShowSelectFolderOnStartup;
 	//}}AFX_DATA
 
