@@ -6,6 +6,7 @@ http://winmerge.org/tracker/[tracker-id]
 WinMerge 2.11.1.9
   Update Python syntax highlight keywords for Python 2.6 (#2473375)
   More accurate visible area rect in location pane (#2479804)
+  New options page for Shell Integration options (#2433648)
   Bugfix: Could not open project file that contains an ampersand 
     character in folder names (#2372000)
   Bugfix: File compare method "Modified Date and Size" ignored file size
